--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.org/"
+baseURL = "https://uxhug.notion.site/Notion-DoIt-d4d107ea67184795b53db5ea3959ca18?pvs=4"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
